# IN204_OORT

./: .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  test_image.ppm  test_image_diffuse_create.ppm  test_image_no_cos.ppm
Bear_algo-no_GUI/: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  test_image_basee.ppm
IN204_qt/: Camera.hpp  Engine.hpp  Error.hpp  IN204_qt.pro  IN204_qt.pro.user.732397c  IN204_qt.pro.user.e03a208  IN204_qt.pro.user.ptqjWM  Matrix.hpp  Object3D.hpp  Object3D_list.hpp  Plane.hpp  Ray.hpp  Sphere.hpp  Vector.hpp  addobjectwindow.cpp  addobjectwindow.h  addobjectwindow.ui  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  temp.cpp  temp.hpp  test_object.json  utils.hpp
build-IN204_qt-Desktop_Qt_6_2_3_GCC_64bit-Release/: IN204_qt  Makefile  moc_addobjectwindow.cpp  moc_mainwindow.cpp  ui_mainwindow.h
build-IN204_qt-Desktop_Qt_6_2_3_MinGW_64_bit-Release/: Final_image.ppm  Final_image2.ppm  Finale_result.ppm  Makefile  Makefile.Debug  Makefile.Release  scene2.json  scene3.json  test.json  test.ppm  ui_addobjectwindow.h  ui_dialog.h  ui_mainwindow.h
build-IN204_qt-Qt_6_2_3_gcc_64-Release/: IN204_qt  Makefile  moc_dialog.cpp  moc_mainwindow.cpp  ui_addobjectwindow.h  ui_dialog.h  ui_mainwindow.h
lib/: Object3D.hpp  Point.hpp  Ray.hpp  Sphere.hpp  Vector.hpp
src/: Camera.hpp  Dielectric.hpp  Engine.hpp  Hit_record.hpp  Material.hpp  Materials.hpp  Matrix.hpp  Object3D.hpp  Object3D_list.hpp  Plane.hpp  Point.hpp  Ray.hpp  main.cpp  (+6 more)
(+41 files in other folders)
